Use native placeholder, fix jumping of long monaco prompts, fix flicker in chat when CmdK is pressed in dark mode (#154)

--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -217,6 +217,10 @@
   background-color: var(--jp-layout-color1);
 }
 
+.pretzelInputField .monaco-editor .editorPlaceholder {
+  font-style: italic;
+}
+
 .chat-sidepanel {
   min-width: 20vw !important;
 }
